<resources>
    <string name="app_name" translatable="false">ToDo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="todoMainLabel" translatable="false">ToDo\'s</string>
    <string name="todoDetailLabel">edit ToDo</string>
    <string name="todoSettingsLabel">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Preference Titles -->
    <string name="design_header">Design</string>

    <!-- Design Preferences -->
    <string name="darkmode">Darkmode</string>
    <string name="fontsize">Textsize</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="emptyBlock">Please fill all fields!</string>
    <string name="priority">Priority</string>
    <string name="tag">Tag</string>
</resources>